ruqqus/assets/style/board_dark.scss
/* ... */
@supports (font-variation-settings: normal) {
    html { font-family: 'Inter var', sans-serif; }
  }

body {
    color: $black;
    padding-top: 49px;
    background-color: $white;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

@media (min-width: 1200px) {
    .container{
        max-width: 1240px;
    }
}

p {
    font-size: 14px;
}

h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
    color: $black;
}

#settings #submit {
    padding-top: 98px;
}

#settings {
    background-color: $white;
}

#page {
    padding-top: 49px;
    background-color: $white;
}

#article {
    padding-top: 0;
    background-color: $white;
}

#thread {
    background-color: $gray-100;
}

// Docs

#article .navbar-light .navbar-nav .nav-link {
    color: $black;
}

#article .navbar-light .navbar-nav .nav-link:hover {
    background-color: transparent;
    color: $primary;
}

#article .navbar-light .navbar-nav .nav-link:focus {
    background-color: transparent;
    color: $primary;
}

.article-title {
    margin-bottom: 3rem;
    font-weight: $font-weight-bold;
    line-height: 3rem;
    margin-top: 2rem;
}

// Hide sidebar on all error pages

#error-400 .sidebar, #error-401 .sidebar, #error-403 .sidebar, #error-404 .sidebar, #error-405 .sidebar, #error-409 .sidebar,
#error-410 .sidebar, #error-422 .sidebar, #error-429 .sidebar, #error-451 .sidebar, #error-500 .sidebar {
    display: none!important;
}

// Message pages

#message .sidebar, #message-success .sidebar {
    display: none;
}

// Padding and Margins

#thread .custom-gutters {
    padding: 0 15px;
    background-color: $white;
}

.custom-gutters {
    padding-left: 15px;
    padding-right: 15px;
}

// Positioning

.sticky {
    position: -webkit-sticky;
    position: sticky;
    top: 49px;
    height: auto;
    overflow-y: auto;
    z-index: 4;
}

.sticky-63 {
    position: -webkit-sticky;
    position: sticky;
    top: 63px;
    height: auto;
    overflow-y: auto;
    z-index: 4;
}

.sticky-105 {
    position: -webkit-sticky;
    position: sticky;
    top: 105px;
    height: auto;
    overflow-y: auto;
    z-index: 4;
}

// Type

.text-lg {
    font-size: $font-size-lg!important;
}

.text-base {
    font-size: $font-size-base!important;
}

.text-small {
    font-size: $small-font-size!important;
}

.text-small-extra {
    font-size: $extra-small-font-size!important;
}

.display-5 {
    @include font-size($display5-size);
    font-weight: $display5-weight;
    line-height: $display-line-height;
}

.lead {
    font-weight: $font-weight-normal;
}

#page p {
    font-size: 16px;
}

// Links

a.dropdown-toggle:hover {
    text-decoration: none;
}

// list items

ul.no-bullets {
    list-style-type: none;
}

.comment-section li {
    list-style-type: none;
}

ol > li {
    list-style-type: none;
    counter-increment: count;
    margin-bottom: .75rem;
}

ol > li::before {
    content: counter(count) ".";
    font-weight: $font-weight-bold;
    margin-right: 0.5rem;
}

.footer .list-inline-item:not(:last-child) {
    margin-right: 1.5rem;
}

[data-toggle="collapse"] .fa:before {   
    content: "\f139";
  }
  
[data-toggle="collapse"].collapsed .fa:before {
    content: "\f13a";
}

// Buttons

.btn {
    font-weight: $font-weight-bold;
    font-size: $font-size-base;
    border-radius: $border-radius-sm;
}

.btn-sm {
    padding: 0.375rem 0.75rem;
    font-size: $small-font-size;
}

.btn-lg {
    font-size: $font-size-base;
}

.btn-secondary {
    color: $gray;
}

.btn-tag {
    border-radius: 3rem;
    font-size: $small-font-size;
    padding: 0.25rem 0.5rem;
    line-height: 1;
}

.btn-tag:hover {
    color: $black;
}

.btn.disabled, .btn:disabled {
    opacity: .5;
}

.btn-white {
    color: $black;
}

.btn-success, .btn-danger {
    color: $white;
}

.btn.login, .btn.register {
    height: calc(1.5em + 0.75rem + 2px);
    border-radius: .35rem;
}

.btn-group.btn-integration {
    border-radius: $border-radius;
    border: 1px solid $border-color;
}

.btn-integration {
    font-weight: $font-weight-bold;
    border-left: 1px solid $border-color;
}

.btn-integration .fab, .btn-integration .fas, .btn-integration .far {
    font-size: $lead-font-size;
    vertical-align: middle;
}

// Tooltips

.tooltip {
    font-weight: $font-weight-bold;
}

.tooltip-inner {
    background-color: $black;
    }

.tooltip.bs-tooltip-right .arrow:before {
    border-right-color: $black !important;
}

.tooltip.bs-tooltip-left .arrow:before {
    border-left-color: $black !important;
}

.tooltip.bs-tooltip-bottom .arrow:before {
    border-bottom-color: $black !important;
}

.tooltip.bs-tooltip-top .arrow:before {
    border-top-color: $black !important;
}

// Alerts

.alert {
    padding: .5rem 1rem;
}

.alert-dismissible .close {
    padding: 0.5rem 1.25rem;
    bottom: 0;
}

.alert-dismissible .close .fa, .alert-dismissible .close .fas, .alert-dismissible .close .far, .alert-dismissible .close .fab {
    margin-right: 0rem;
}

.alert .fa, .alert .fas, .alert .far, .alert .fab {
    margin-right: 0.5rem;
}

// Toasts

.toast {
    border: 0;
    display: none;
}

.toast.clipboard {
    font-size: 1rem;
}

// Navbar and tab Bar

.navbar-toggler-icon {
    width: auto;
    height: auto;
}


.navbar-toggler-icon, .navbar-dark .navbar-toggler-icon, .navbar-light .navbar-toggler-icon {
    background: transparent;
}

.navbar-toggler, .navbar-dark .navbar-toggler, .navbar-light .navbar-toggler {
    border: none;
}

.navbar-expand-md .navbar-nav .nav-link {
    padding-left: 1rem;
    padding-right: 1rem;
}

#page .navbar-light .navbar-nav .nav-link {
    color: $dark;
}

#page .navbar-light .navbar-nav .nav-link:hover {
    background-color: transparent;
    color: $primary;
}

.navbar-brand, .navbar-light .navbar-brand {
    color: $purple;
    font-weight: $font-weight-bold;
}
/* ... */

